--- a/examples/pollock.html
+++ b/examples/pollock.html
@@ -23,10 +23,9 @@
                 "click": {
                     "actions": [
                         {
-                            "type": "navigate",
-                            "name": "Navigate to store via image",
-                            "lo": 23423423,
-                            "la": 2423423423
+                            "type": "link",
+                            "name": "Buy",
+                            "uri": "https://search.com"
                         }
                     ]
                 }
@@ -100,144 +99,201 @@
         "@version": "1.0",//TODO: replace
         "elements": [
             {
-                "type": "text",
-                "text": "Section",
-                "tooltip": "text tooltip",
-                "style": {
-                    "bold": true,
-                    "size": "large"
-                }
-            },
-            {
-                "type": "horizontal",
+                "type": "vertical",
                 "elements": [
                     {
-                        "type": "image",
-                        "url": "https://cdn.macrumors.com/article-new/2017/09/iphonexfrontback-800x573.jpg",
-                        "tooltip": "image tooltip",
-                        "click": {
-                            "actions": [
-                                {
-                                    "type": "publishText",
-                                    "text": "my text"
-                                }
-                            ]
+                        "type": "text",
+                        "text": "Section",
+                        "tooltip": "text tooltip",
+                        "style": {
+                            "bold": true,
+                            "size": "large"
                         }
                     },
                     {
-                        "type": "vertical",
+                        "type": "horizontal",
                         "elements": [
                             {
-                                "type": "text",
-                                "text": "product name (Title)",
-                                "tooltip": "text tooltip",
-                                "style": {
-                                    "bold": true,
-                                    "size": "large"
+                                "type": "image",
+                                "url": "https://cdn.macrumors.com/article-new/2017/09/iphonexfrontback-800x573.jpg",
+                                "tooltip": "image tooltip",
+                                "click": {
+                                    "actions": [
+                                        {
+                                            "type": "publishText",
+                                            "text": "my text"
+                                        }
+                                    ]
                                 }
                             },
                             {
-                                "type": "text",
-                                "text": "product name (Title)",
-                                "tooltip": "text tooltip"
-                            }
+                                "type": "vertical",
+                                "elements": [
+                                    {
+                                        "type": "text",
+                                        "text": "product name (Title)",
+                                        "tooltip": "text tooltip",
+                                        "style": {
+                                            "bold": true,
+                                            "size": "large"
+                                        }
+                                    },
+                                    {
+                                        "type": "text",
+                                        "text": "product name (Title)",
+                                        "tooltip": "text tooltip"
+                                    },
+                                    {
+                                        "type": "button",
+                                        "tooltip": "button tooltip",
+                                        "title": "Add to cart",
+                                        "click": {
+                                            "actions": [
+                                                {
+                                                    "type": "link",
+                                                    "name": "Add to cart",
+                                                    "uri": "https://example.com"
+                                                }
+                                            ]
+                                        }
+                                    }
+                                ]
+                            },
                         ]
                     },
-                ]
-            },
-            {
-                "type": "horizontal",
-                "elements": [
                     {
-                        "type": "image",
-                        "url": "https://cdn.macrumors.com/article-new/2017/09/iphonexfrontback-800x573.jpg",
-                        "tooltip": "image tooltip",
-                        "click": {
-                            "actions": [
-                                {
-                                    "type": "navigate",
-                                    "name": "Navigate to store via image",
-                                    "lo": 23423423,
-                                    "la": 2423423423
-                                }
-                            ]
-                        }
-                    },
-                    {
-                        "type": "vertical",
+                        "type": "horizontal",
                         "elements": [
                             {
-                                "type": "text",
-                                "text": "product name (Title)",
-                                "tooltip": "text tooltip",
-                                "style": {
-                                    "bold": true,
-                                    "size": "large"
+                                "type": "image",
+                                "url": "https://cdn.macrumors.com/article-new/2017/09/iphonexfrontback-800x573.jpg",
+                                "tooltip": "image tooltip",
+                                "click": {
+                                    "actions": [
+                                        {
+                                            "type": "navigate",
+                                            "name": "Navigate to store via image",
+                                            "lo": 23423423,
+                                            "la": 2423423423
+                                        }
+                                    ]
                                 }
                             },
                             {
-                                "type": "text",
-                                "text": "product name (Title)",
-                                "tooltip": "text tooltip"
-                            }
-                        ]
-                    }
-                ]
-            },
-            {
-                "type": "text",
-                "text": "Section 2",
-                "tooltip": "text tooltip",
-                "style": {
-                    "bold": true,
-                    "size": "large"
-                }
-            },
-            {
-                "type": "horizontal",
-                "elements": [
-                    {
-                        "type": "image",
-                        "url": "https://cdn.macrumors.com/article-new/2017/09/iphonexfrontback-800x573.jpg",
-                        "tooltip": "image tooltip",
-                        "click": {
-                            "actions": [
-                                {
-                                    "type": "navigate",
-                                    "name": "Navigate to store via image",
-                                    "lo": 23423423,
-                                    "la": 2423423423
-                                }
-                            ]
-                        }
-                    },
-                    {
-                        "type": "vertical",
-                        "elements": [
-                            {
-                                "type": "text",
-                                "text": "product name (Title)",
-                                "tooltip": "text tooltip",
-                                "style": {
-                                    "bold": true,
-                                    "size": "large"
-                                }
-                            },
-                            {
-                                "type": "text",
-                                "text": "product name (Title)",
-                                "tooltip": "text tooltip"
+                                "type": "vertical",
+                                "elements": [
+                                    {
+                                        "type": "text",
+                                        "text": "product name (Title)",
+                                        "tooltip": "text tooltip",
+                                        "style": {
+                                            "bold": true,
+                                            "size": "large"
+                                        }
+                                    },
+                                    {
+                                        "type": "text",
+                                        "text": "product name (Title)",
+                                        "tooltip": "text tooltip"
+                                    },
+                                    {
+                                        "type": "button",
+                                        "tooltip": "button tooltip",
+                                        "title": "Add to cart",
+                                        "click": {
+                                            "actions": [
+                                                {
+                                                    "type": "link",
+                                                    "name": "Add to cart",
+                                                    "uri": "https://example.com"
+                                                }
+                                            ]
+                                        }
+                                    }
+                                ]
                             }
                         ]
                     }
-                ]
+                ],
             },
+            {
+                "type": "vertical",
+                "elements": [
+                    {
+                        "type": "text",
+                        "text": "Section 2",
+                        "tooltip": "text tooltip",
+                        "style": {
+                            "bold": true,
+                            "size": "large"
+                        }
+                    },
+                    {
+                        "type": "horizontal",
+                        "elements": [
+                            {
+                                "type": "image",
+                                "url": "https://cdn.macrumors.com/article-new/2017/09/iphonexfrontback-800x573.jpg",
+                                "tooltip": "image tooltip",
+                                "click": {
+                                    "actions": [
+                                        {
+                                            "type": "navigate",
+                                            "name": "Navigate to store via image",
+                                            "lo": 23423423,
+                                            "la": 2423423423
+                                        }
+                                    ]
+                                }
+                            },
+                            {
+                                "type": "vertical",
+                                "elements": [
+                                    {
+                                        "type": "text",
+                                        "text": "product name (Title)",
+                                        "tooltip": "text tooltip",
+                                        "style": {
+                                            "bold": true,
+                                            "size": "large"
+                                        }
+                                    },
+                                    {
+                                        "type": "text",
+                                        "text": "product name (Title)",
+                                        "tooltip": "text tooltip"
+                                    },
+                                    {
+                                        "type": "button",
+                                        "tooltip": "button tooltip",
+                                        "title": "Add to cart",
+                                        "click": {
+                                            "actions": [
+                                                {
+                                                    "type": "link",
+                                                    "name": "Add to cart",
+                                                    "uri": "https://example.com"
+                                                }
+                                            ]
+                                        }
+                                    }
+                                ]
+                            }
+                        ]
+                    }
+                ],
+            }
         ]
     };
     const rooEl = JsonPollock.render(card);
     document.getElementById('container').appendChild(rooEl);
 
     document.getElementById('container2').appendChild(JsonPollock.render(list));
+    const linkCallback = (data) => {
+        //data => {actionData: <action configuration>, metadata: <metadata configuration, if given>}
+        window.open(data.actionData.uri,"_blank")
+    };
+    JsonPollock.registerAction('link', linkCallback);
 
 </script>
 
